2002-03-05  James Henstridge  <james@daa.com.au>

	* moduleinfo.py (head): s/Task/MetaModule/, and rename meta
	modules to begin with meta-, so they match the GARNOME naming.

	* module.py (MetaModule): rename from Task.

2002-03-02  Havoc Pennington  <hp@pobox.com>

	* moduleinfo.py: add bug-buddy to 'desktop' task

2002-02-20  James Henstridge  <james@daa.com.au>

	* module.py (BuildScript.login): make python 1.5 compatible.  And
	make it work with both new and old style lines in the .cvspass
	file.

2002-02-20  Johan Dahlin  <jdahlin@telia.com>

	* bootstrap.py: use version from autoconf2.50 is it exists (which is
	the case on debian systems)

	* jhbuild.py: Add nicer output if the config file isn't found,
	create $PREFIX/share and $PREFIX/share/aclocal if they don't exist

	* module.py: strip out port when checking for cvs server in ~/.cvspass

2002-02-20  James Henstridge  <james@daa.com.au>

	* moduleinfo.py (head): add extra dep for nautilus.  Patch from
	Wan Hing Wah <hingwah@computer.org>.

2002-02-18  Manish Singh  <yosh@gimp.org>

	* jhbuild.py: allow a default list of modules to skip in the
	config file

2002-02-14  Johan Dahlin  <jdahlin@telia.com>

	* moduleinfo.py: make libgnomecanvas depends on gnome-common

2002-02-13  James Henstridge  <james@daa.com.au>

	* moduleinfo.py (head): add tasks gnome-libs, gnome-core and
	desktop (if anyone else has good ideas for tasks, please suggest
	them).
	(head): fix up deps for the split up gnome-core.

	* module.py (Task): simple class for mapping a single name to a
	list of modules to build.
	(ModuleSet.__expand_mod_list): function for expanding a list of
	strings to a list of Module instances.  Takes task objects into
	account.
	(ModuleSet.get_module_list): use __expand_mod_list() to expand
	module lists, so we get task support.

2002-02-13  Xavier Ordoquy <MCArkan@gael.sourceforge.net>

	* moduleinfo.py: changed gnome-core to
	gnome-desktop/panel/session.

2002-02-12  James Henstridge  <james@daa.com.au>
