@@ -1,5 +1,8 @@
 2002-03-05  James Henstridge  <james@daa.com.au>
 
+	* module.py (BuildScript.build): if we are forcing a configure,
+	also force a checkout, rather than update.
+
 	* moduleinfo.py (head): s/Task/MetaModule/, and rename meta
 	modules to begin with meta-, so they match the GARNOME naming.
 
